# gmrender-resurrect

./: configure.ac
src/: Makefile.am  main.cc  output.cc  output.h  output_gstreamer.cc  output_gstreamer.h  output_module.h  song-meta-data.cc  song-meta-data.h  upnp_connmgr.cc  upnp_control.cc  upnp_device.cc  upnp_transport.cc  upnp_transport.h
